# docker_redis_fastapi

./: _env.py  alembic.ini  pyproject.toml
app/alembic/: env.py
app/alembic/versions/: 9b66d5032332_your_migration_message.py  cd55451b1195_initial.py
app/api/: db.py  db_maneger.py  db_model.py  main.py  models.py  movies.py  performance.py
