[tool.poetry]
name = "redis-docer-fastapi"
version = "0.1.0"
description = ""
authors = ["gleb165 <83755952+gleb165@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
aioredis = "^2.0.1"
uvicorn = "^0.24.0.post1"
pydantic = "^2.5.2"
psycopg2-binary = "^2.9.9"
databases = "^0.8.0"
asyncpg = "^0.29.0"
alembic = "^1.13.0"
greenlet = "^3.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
